@@ -11,6 +11,7 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -35,30 +36,43 @@ public class ShopController {
                 "/images/banner2.jpg",
                 "/images/banner3.jpg"
         );
-
         model.addAttribute("bannerImages", bannerImages);
 
-        // 검색 결과
+        // 검색 결과 초기화
         List<FoodDto> foods;
-        if (searchCategory != null && !searchCategory.isEmpty()) {
+
+        if (query != null && !query.trim().isEmpty()) {
+            // 검색어가 있는 경우 검색어와 카테고리를 기준으로 검색
             foods = shopService.searchFoods(query, searchCategory);
+        } else if (searchCategory != null && !searchCategory.trim().isEmpty()) {
+            // 검색어는 없고 카테고리만 있는 경우
+            foods = shopService.searchFoods(null, searchCategory);
         } else {
-            foods = shopService.searchFoods(query, null);
+            // 검색어와 카테고리 모두 없는 경우 전체 데이터 조회
+            foods = shopService.searchFoods(null, null);
         }
 
         // foods 리스트가 null인지 체크하고 빈 리스트로 초기화
         if (foods == null) {
-            foods = List.of(); // Java 11 이상에서는 List.of() 사용
+            foods = Collections.emptyList(); // Java 8 호환성을 위해 Collections.emptyList() 사용
         }
 
         // 모든 카테고리 조회
         List<CategoryDto> categories = categoryService.findAllCategories();
 
+        // categories가 null인지 체크하고 빈 리스트로 초기화
+        if (categories == null) {
+            categories = Collections.emptyList();
+        }
+
         // 카테고리별 추천 상품 조회
         Map<Integer, List<FoodDto>> categoryRecommendations = categories.stream()
                 .collect(Collectors.toMap(
                         CategoryDto::getCategory_id,
-                        category -> shopService.findTopNByCategoryId(category.getCategory_id(), 5)
+                        category -> {
+                            List<FoodDto> recommendations = shopService.findTopNByCategoryId(category.getCategory_id(), 5);
+                            return recommendations != null ? recommendations : Collections.emptyList();
+                        }
                 ));
 
         model.addAttribute("foods", foods);
